# ComputerVision_ZeroClaw_Agent

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml  requirements.text  test_events.txt
.claude/: settings.json
.specify/memory/: constitution.md
config/: agent_config.yaml
eko_sidecar/: browser_agent.js  index.js  package-lock.json  package.json
output/diagrams/run_20260304_155909_bb94fc/: planning.json  run_input.json
output/diagrams/run_20260304_170317_5286e9/: metadata.json  planning.json  run_input.json
output/diagrams/run_20260304_170940_cb8f70/: metadata.json  planning.json
output/diagrams/run_20260304_172109_8620a7/: run_input.json
output/diagrams/run_20260304_173657_f3273e/: planning.json
output/diagrams/run_20260304_174145_ddba2f/: planning.json  (+1 more)
output/digests/: .gitkeep
output/specs/: .gitkeep
scripts/: generate_diagrams.mjs  run_weekly_digest.py  setup.sh  smoke_text2diagram_api.py  validate_copilot_t026.py
specs/001-eko-integration/: plan.md  spec.md  tasks.md
specs/002-cv-playground/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/003-live-playground/: plan.md  spec.md  tasks.md
specs/004-labelling-tool/: data-model.md  plan.md  research.md  spec.md  tasks.md
specs/005-copilot-sdk-chat/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/006-skill-creator/: data-model.md  plan.md  spec.md  tasks.md
src/: deit_vision_transformer.py
src/cv_agent/: __init__.py  agent.py  cli.py  config.py  copilot_session.py  dataset_manager.py  http_client.py  labelling_client.py  local_model_manager.py  server_manager.py  skill_creator.py  web.py
src/zeroclaw_tools/: __init__.py
templates/: paper_note.md.j2  spec.md.j2  weekly_digest.md.j2
tests/: __init__.py  test_config.py  test_http_client.py  test_knowledge_graph.py  test_paper_fetch.py  test_web_chat_models.py  test_workflow_manager.py
tests/unit/: test_dag_runner.py  test_labelling_client.py  test_labelling_tools.py
vault/: README.md
vault/.obsidian/: graph.json
zeroclaw-rust/: Cargo.toml
zeroclaw-rust/src/: agent.rs  config.rs  main.rs
zeroclaw-rust/src/llm/: client.rs  mod.rs  types.rs
zeroclaw-rust/src/tools/: file.rs  http_tool.rs  mod.rs  paper_fetch.rs  shell.rs  vision.rs  web_search.rs
zeroclaw-rust/src/web/: mod.rs  ws.rs
(+103 files in other folders)
