[package]
name = "zeroclaw"
version = "0.1.0"
edition = "2021"
description = "CV Zero Claw Agent — Rust port (memory-optimised)"
license = "MIT"

[[bin]]
name = "zeroclaw"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = { version = "0.8", features = ["ws", "multipart"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
clap = { version = "4", features = ["derive"] }
dotenvy = "0.15"
tokio-stream = "0.1"
futures-util = "0.3"
tower-http = { version = "0.6", features = ["fs", "cors"] }
tower = "0.5"
regex = "1"
async-trait = "0.1"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
base64 = "0.22"
tokio-util = { version = "0.7", features = ["codec", "io"] }
bytes = "1"
quick-xml = "0.37"
async-stream = "0.3"
